# trout

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  prd.md
app/: main.mm
core/include/trout/: Compat.h  Emoji.h  Engine.h  Inference.h  Log.h  Models.h  Paths.h  PromptRequestFactory.h  Settings.h  Store.h  SuggestionTextNormalizer.h  TypoSuppression.h
core/src/: Compat.cpp  Emoji.cpp  EmojiData.inc  Engine.cpp  InferenceStub.cpp  LlamaBackend.cpp  Log.cpp  Models.cpp  Paths.cpp  PromptRequestFactory.cpp  Settings.cpp  Store.cpp  SuggestionTextNormalizer.cpp  TypoSuppression.cpp
inputmethod/: CMakeLists.txt  Info.plist.in  TroutInputController.h  TroutInputController.mm  main.mm
platform/macos/: Accessibility.h  Accessibility.mm  AppController.h  AppController.mm  CMakeLists.txt  EventTap.h  EventTap.mm  MenuBarController.h  MenuBarController.mm  Overlay.h  Overlay.mm  Permissions.h  Permissions.mm  SettingsWindow.h  SettingsWindow.mm
resources/: Info.plist.in
scripts/: build.sh  install-inputmethod.sh
tests/: PromptRequestFactoryTests.cpp  SuggestionTextNormalizerTests.cpp  TypoSuppressionTests.cpp
